# thesis_extractor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
docs/: ABSTRACT.md
examples/: demo.md
src/thesis_extractor/: __init__.py  cli.py  eval.py  pdf.py  preprocess.py  rag.py  visualize.py
tests/: conftest.py  test_basic.py  test_merge_smoke.py
